refactor: working directory

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,11 +6,11 @@ on:
     branches:
       - main
     paths:
-      - develop/**
+      - deployment/**
   
   pull_request: # [master, next]
     paths:
-      - develop/**
+      - deployment/**
 
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
-        working-directory: develop
+        working-directory: deployment/**
         shell: bash
 
     steps:
