--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,9 @@ on:
     paths:
       - deployment/
   
-  pull_request: # [master, next]
+  pull_request:
+    branches:
+      - 'feature/**' 
     paths:
       - deployment/
 
