--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,16 +4,15 @@ on:
   
   push:
     branches:
-      - main
-    paths:
-      - deployment/
+      - 'main'
   
   pull_request:
     branches:
       - 'feature/**' 
-    paths:
-      - deployment/
 
+env:
+ TF_VERSION: 1.1.7
+ TF_WORKING_DIR: deployment
 
 jobs:
   terraform:
@@ -34,14 +33,13 @@ jobs:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-
-
-
+      with:
+        terraform_version: ${{ env.TF_VERSION }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       id: init
-      run: terraform init
+      run: terraform init ${{ env.TF_WORKING_DIR }}
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
